fixtures/frontend/milestone-2/invalid/source-contract-arity-mismatch/main.aivi
type HttpError =
  | Timeout
  | DecodeFailure Text

type User = {
    id: Int,
    name: Text
}

type DecodeMode =
  | Strict
  | Permissive

type Map K =
  | EmptyMap

domain Duration over Int
    literal sec : Int -> Duration

domain Retry over Int
    literal rt : Int -> Retry

value authHeaders : Map Text = EmptyMap

@source http.get "/users" with {
    headers: authHeaders,
    decode: Strict,
    retry: 3rt,
    timeout: 5sec
}
signal users : Signal (Result HttpError (List User))
